@@ -238,3 +238,5 @@ Wednesday 30 December 2009 (03:48:54 PM)
     simulation.
 Friday 08 January 2010 (01:10:01 AM)
     - code for measuring performance gain from parallel simulations. 
+Friday 08 January 2010 (10:02:22 AM)
+    - code for timing serial code (to compare results with serial case.)
